--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -366,8 +366,14 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge "qt>=5.12" libboost-devel glew eigen spectralib zfp \
-          sqlite scikit-learn python=3.10 zlib qhull llvm-openmp graphviz clangxx
+        conda install -c conda-forge "qt>=5.12" \
+          libboost-devel glew eigen spectralib zfp \
+          sqlite scikit-learn graphviz ninja python=3.10 zlib qhull \
+          llvm-openmp clangxx
+        # add TTK & ParaView install folders to PATH
+        echo "$PV_DIR/bin" >> $GITHUB_PATH
+        echo "$TTK_DIR/bin" >> $GITHUB_PATH
+        conda info --all
 
     - name: Remove hosted Python
       shell: bash
@@ -390,7 +396,7 @@ jobs:
     - name: Create & configure TTK build directory
       shell: cmd
       run: |
-        set CMAKE_PREFIX_PATH=%CONDA_ROOT%\Library\lib\cmake;%CONDA_ROOT%\Library\share\eigen3\cmake;%CONDA_ROOT%\Library\cmake;%ProgramFiles%\TTK-ParaView\lib\cmake
+        set CMAKE_PREFIX_PATH=%CONDA_ROOT%\Library\lib\cmake;%CONDA_ROOT%\Library\share\eigen3\cmake;%CONDA_ROOT%\Library\share\Qull\cmake;%CONDA_ROOT%\Library\cmake;%ProgramFiles%\TTK-ParaView\lib\cmake;
         set CC=clang-cl.exe
         set CXX=clang-cl.exe
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
@@ -418,12 +424,16 @@ jobs:
           -DTTK_ENABLE_OPENMP=TRUE ^
           -DTTK_ENABLE_CPU_OPTIMIZATION=FALSE ^
           -DTTK_ENABLE_SHARED_BASE_LIBRARIES=TRUE ^
-          -G"Visual Studio 17 2022" ^
-          -Tclangcl ^
+          -GNinja ^
           ..
 
-    - name: Build TTK
+    - name: Fix clang-cl OpenMP flags in build.ninja
       shell: bash
+      run: |
+        sed -i 's/-Xclang -fopenmp/-openmp/' build/build.ninja
+
+    - name: Build TTK
+      shell: cmd
       run: |
         cd build
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
@@ -460,8 +470,14 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge "qt>=5.12" libboost-devel glew eigen spectralib zfp \
-          sqlite scikit-learn qhull zlib  llvm-openmp graphviz 
+        conda install -c conda-forge "qt>=5.12" \
+          libboost-devel glew eigen spectralib zfp \
+          sqlite scikit-learn graphviz ninja python=3.10 zlib qhull \
+          llvm-openmp clangxx
+        # add TTK & ParaView install folders to PATH
+        echo "$PV_DIR/bin" >> $GITHUB_PATH
+        echo "$TTK_DIR/bin" >> $GITHUB_PATH
+        conda info --all
 
     - name: Remove hosted Python
       shell: bash
@@ -492,22 +508,28 @@ jobs:
     - name: Test C++ example
       shell: cmd
       run: |
+        set CC=clang-cl.exe
+        set CXX=clang-cl.exe
+        call "%ProgramFiles%\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         set CMAKE_PREFIX_PATH=%TTK_DIR%\lib\cmake;%PV_DIR%\lib\cmake
         cd %GITHUB_WORKSPACE%\examples\c++
         mkdir build
         cd build
-        cmake -G"Visual Studio 17 2022" -Tclangcl ..
+        cmake -DCMAKE_BUILD_TYPE=Release -GNinja ..
         cmake --build . --config Release --parallel
         Release\ttkExample-c++.exe -i ..\..\data\inputData.off
 
     - name: Test VTK-C++ example
       shell: cmd
       run: |
+        set CC=clang-cl.exe
+        set CXX=clang-cl.exe
+        call "%ProgramFiles%\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         set CMAKE_PREFIX_PATH=%TTK_DIR%\lib\cmake;%PV_DIR%\lib\cmake
         cd %GITHUB_WORKSPACE%\examples\vtk-c++
         mkdir build
         cd build
-        cmake -G"Visual Studio 17 2022" -Tclangcl ..
+        cmake -DCMAKE_BUILD_TYPE=Release -GNinja ..
         cmake --build . --config Release --parallel
         Release\ttkExample-vtk-c++.exe -i ..\..\data\inputData.vtu
 
