[ci] upgrading for new macos images

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -271,7 +271,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-12, macos-14]
+        os: [macos-13, macos-14, macos-15]
     if: ${{ github.repository_owner == 'topology-tool-kit' || !contains(github.ref, 'heads') }}
     env:
       DYLD_LIBRARY_PATH: /usr/local/lib
@@ -303,14 +303,8 @@ jobs:
 
     - name: Fetch TTK-ParaView headless macOS binary archive
       run: |
-        if [[ "${{ matrix.os }}" == "macos-12" ]]; then
           wget -O ttk-paraview-headless.tar.gz \
             https://github.com/${{ env.PV_REPO }}/releases/download/${{ env.PV_TAG }}/ttk-paraview-headless-${{ matrix.os }}.tar.gz
-        fi
-        if [[ "${{ matrix.os }}" == "macos-14" ]]; then
-          wget -O ttk-paraview-headless.tar.gz \
-            https://github.com/${{ env.PV_REPO }}/releases/download/${{ env.PV_TAG }}/ttk-paraview-headless-${{ matrix.os }}-arm64.tar.gz
-        fi
 
     - name: Install ParaView
       run: |
