--- a/.github/actions/test-ttk-unix/action.yml
+++ b/.github/actions/test-ttk-unix/action.yml
@@ -33,8 +33,10 @@ runs:
     - name: Test pvpython example
       shell: bash
       run: |
-        cd $GITHUB_WORKSPACE/examples/pvpython
-        pvpython example.py ../data/inputData.vtu
+        if [ "${{ matrix.os }}" != "macos-13" ] && [ "${{ matrix.os }}" != "macos-14" ] && [ "${{ matrix.os }}" != "macos-15" ]; then
+          cd $GITHUB_WORKSPACE/examples/pvpython
+          pvpython example.py ../data/inputData.vtu
+        fi
 
     - name: Test standalone
       shell: bash
