--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -280,14 +280,13 @@ jobs:
     - uses: actions/checkout@v4
       name: Checkout TTK source code
 
-    - name: Remove hosted Python
-      run: |
-        #sudo rm -rf /Library/Frameworks/Python.framework/
-        #sudo rm -rf /usr/local/Frameworks/Python.framework/
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
-        #brew reinstall python
         brew install --cask xquartz
         brew install llvm ninja open-mpi
         # TTK dependencies
@@ -310,6 +309,8 @@ jobs:
       run: |
         tar xzf ttk-paraview-headless.tar.gz
         sudo cp -r ttk-paraview/* /usr/local
+        # pvpython does not embed the correct PYTHONPATH
+        echo "PYTHONPATH=/usr/local/lib/python3.12/site-packages:$PYTHONPATH" >> $GITHUB_ENV
         pvpython -m pip install --break-system-packages scikit-learn
 
     - name: Set compilers as environment variables
@@ -349,11 +350,6 @@ jobs:
       shell: bash
       run: sccache --show-stats
 
-    - name: Set PYTHONPATH for macOS pvpython
-      run: |
-        # pvpython does not embed the correct PYTHONPATH
-        echo "PYTHONPATH=/usr/local/lib/python3.13/site-packages:$PYTHONPATH" >> $GITHUB_ENV
-
     - name: Run TTK tests
       uses: ./.github/actions/test-ttk-unix
 
@@ -388,8 +384,7 @@ jobs:
         path: ttk-data/tests/screenshots.tar.gz
         retention-days: 10
 
-    - name: Run ttk-data Python scripts [TEMPORARILY NOT ENFORCED]
-      continue-on-error: true
+    - name: Run ttk-data Python scripts
       run: |
         cd ttk-data
         # remove buggy example
